# audit-trail

./: .env.example  .venv  ANALYSIS.md  BENCHMARKS.md  CONTRIBUTING.md  Dockerfile  ENTERPRISE_REVIEW.md  PLAN.md  README.md  SECURITY.md  VALIDATION.md  alembic.ini  audit_trail.db  coverage.xml  docker-compose.yml  pyproject.toml  sbom.json
.github/workflows/: ci.yml
benchmarks/: bench_api.py
docs/: deployment.md  use-cases.md
src/audit_trail/: __init__.py  app.py  auth.py  config.py  models.py  schemas.py
src/audit_trail/routes/: auth.py  events.py  retention.py  webhooks.py
tests/: conftest.py  test_app.py  test_config.py  test_database.py  test_e2e.py  test_feature_validation.py  test_integration.py  test_models.py
