[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-trail"
version = "0.1.0"
description = "Immutable audit logging service. Tamper-evident event logging with hash chains, REST API for ingestion/search/export, retention policies, webhook notifications. FastAPI + PostgreSQL."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "PyJWT[crypto]>=2.8",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.27",
]

[project.scripts]
audit-trail = "audit_trail.app:app"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-asyncio", "httpx", "aiosqlite", "ruff", "mypy", "bandit"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
concurrency = ["greenlet", "thread"]
